# dual-stream-redraft

./: .gitignore  README.md  answer.txt  meta.json  monologue.jsonl  monologue.txt  pyproject.toml  requirements.txt
desktop/: index.html  package.json  tsconfig.electron.json
desktop/electron/: main.ts  preload.ts
desktop/src/: App.tsx  styles.css  vite-env.d.ts
desktop/src/components/: ArtifactList.tsx  FrameExplorer.tsx  JsonViewer.tsx
docs/: arc_dsa_trace_schema.md  arc_solver.md  dsa_operational_clarifications.md  kaggle_submission.md
dualstream/: __init__.py  api.py  arc_audit.py  arc_frame.py  arc_grid.py  arc_metrics.py  arc_program.py  arc_solver.py  arc_task.py  artifacts.py  audit.py  cli.py  frame.py  generator.py  integrity.py  offline.py  probes.py  render.py  service.py  vocab.py
dualstream/web/: api-client.js  app.js  index.html  styles.css
dualstream/web/static/: app.js  styles.css
eval/: arc_dsa_benchmark.yaml  assert_coherence.js  dualstream_provider.py  probe_pack_arc_v0.json  probe_pack_template_gpt2.json  promptfooconfig.yaml
examples/: arc_dsa_demo.py  run_arc_solver.py  run_dualstream.py
scripts/: download_model.py
tests/: test_api_browser_ui.py  test_api_web.py  test_arc_audit.py  test_arc_cli.py  test_arc_frame.py  test_arc_grid.py  test_arc_metrics.py  test_arc_program.py  test_arc_solver.py  test_arc_task.py  test_artifacts.py  test_cli.py  test_frame_codec.py  test_generator_probe_pack_io.py  test_integrity.py  test_offline_mode.py  test_service.py
