[project]
name = "dualstream"
version = "0.1.0"
description = "Dual-Stream Architecture software-only reference implementation"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
  "transformers>=4.41",
  "numpy>=1.24",
  "tqdm>=4.66",
]

[project.scripts]
dualstream = "dualstream.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
